[package]
name = "visualizer_rust"
version = "0.1.0"
authors = ["Artsiom Balakir <abalak8@illinois.edu>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
solana = { path = "../../core", version = "0.13.0" }
solana-logger = { path = "../../logger", version = "0.13.0" }
solana-sdk = { path = "../../sdk", version = "0.13.0" }

